ya estamos en estados unidos

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ include_directories(include)
 add_executable(fisianito
   include/Game/Animation.hpp
   include/Game/Bullet.hpp
+  include/Game/Bullets.hpp
   include/Game/Collision.hpp
   include/Game/Enemy.hpp
   include/Game/Entity.hpp
@@ -28,6 +29,7 @@ add_executable(fisianito
   include/DataStructures/EntityNode.hpp
   src/Game/Animation.cpp
   src/Game/Bullet.cpp
+  src/Game/Bullets.cpp
   src/Game/Collision.cpp
   src/Game/Enemy.cpp
   src/Game/Entity.cpp
