Añadiendo al CMAKE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,3 +44,4 @@ target_link_libraries(fisianito sfml-graphics sfml-audio)
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
+set_property(TARGET fisianito PROPERTY CXX_STANDARD 17)
